<resources>
    <string name="app_name">CoreGoal</string>
    <string name="home">Accueil</string>
    <string name="activity">Activités</string>
    <string name="weight">Poids</string>
    <string name="dish">Plats</string>
    <string name="food">Végétaux</string>
    <string name="profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semaine">Semaine</string>
    <string name="mois">Mois</string>
    <string name="annee">Année</string>
    <string name="activity_days_description">Jours d\'activité</string>
    <string name="heart_description">Moyenne BPM</string>
    <string name="activity_time_description">Temps d\'activité</string>
    <string name="cereals">Céréales</string>
    <string name="fish">Poissons</string>
    <string name="meat">Viandes</string>
    <string name="connexion">CONNEXION</string>
    <string name="createAccount">Créer un compte</string>
    <string name="connexionAccount">Se connecter</string>
    <string name="register">INSCRIPTION</string>
    <string name="registerAccount">S\'inscrire</string>
    <string name="LogoApplication">Logo de l\'application</string>
    <string name="name">Prénom</string>
    <string name="surname">Nom</string>
    <string name="dateOfBirth">Date de naissance</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="choiceLunch">CHOIX DU REPAS</string>
    <string name="choiceProduct">Choisissez un produit</string>
    <string name="unity">Unité :</string>
    <string name="quantity">Quantité :</string>
    <string name="addActivity">Ajouter une activité</string>
    <string name="mostPopular">+ populaires</string>
    <string name="all">Toutes</string>
    <string name="cycling">Vélo</string>
    <string name="swimming">Natation</string>
    <string name="fitness">Musculation</string>
    <string name="running">Course à pied</string>
    <string name="hiking">Marche</string>
    <string name="taekwondo">Taekwondo</string>
    <string name="ski">Ski</string>
    <string name="walking">Marche</string>
    <string name="gymnastics">Gymnastique</string>
    <string name="handball">Handball</string>
    <string name="kayaking">Kayak</string>
    <string name="scubaDiving">Plongée</string>
    <string name="skateboarding">Skateboard</string>
    <string name="surfing">Surf</string>
    <string name="football">Football</string>
    <string name="durationActivity">Comment de temps a duré votre activité ?</string>
    <string name="less">Moins</string>
    <string name="plus">Plus</string>
    <string name="time">0:30</string>
    <string name="hour">Heures</string>
    <string name="add">Ajouter</string>
    <string name="homePage">Page d\'accueil</string>
    <string name="imageProfile">Photo de profil</string>
    <string name="username">Username</string>
    <string name="zero">0</string>
    <string name="personalInformation">Informations Personnelles</string>
    <string name="size">Taille</string>
    <string name="gender">Sexe</string>
    <string name="saveModification">Sauvegarder les modifications</string>
    <string name="enterObjective">Vous avez saisi l\'objectif de :</string>
    <string name="yourEvolution">VOTRE ÉVOLUTION</string>
    <string name="enterWeight">SAISIE POIDS</string>
    <string name="save">Sauvegarder</string>
    <string name="yourProgression">VOTRE PROGRESSION</string>
    <string name="waitWeight">--</string>
    <string name="progressionText">Progression par rapport à votre objectif !</string>
    <string name="anObjective">Un objectif ?</string>
    <string name="yourObjective">VOTRE OBJECTIF</string>
</resources>