<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home" android:id="@+id/home" android:icon="@drawable/home_24"
          android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <item android:title="@string/activity" android:id="@+id/activities" android:icon="@drawable/directions_run_24"
          android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <item android:title="@string/weight" android:id="@+id/weight" android:icon="@drawable/monitor_weight_24"
          android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <item android:title="@string/dish" android:id="@+id/food" android:icon="@drawable/flatware_24"
          android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <item android:title="@string/profile" android:id="@+id/profile" android:icon="@drawable/person_24"
          android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</menu>