<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ActivitiesFragment">

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="@string/addActivity"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Primary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.009"
            />
    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                        android:id="@+id/chipPopulaires"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mostPopular"
                        android:checked="true"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/chipToutes"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"/>
            </com.google.android.material.chip.ChipGroup>

            <GridLayout
                    android:id="@+id/gridActivities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:columnCount="3"
                    android:useDefaultMargins="true">

                <ImageButton
                        android:id="@+id/btnActivityBike"
                        android:src="@drawable/directions_bike_24"
                        android:contentDescription="@string/cycling"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:tag="popular"
                />

                <ImageButton
                        android:id="@+id/btnActivitySwim"
                        android:src="@drawable/pool"
                        android:contentDescription="@string/swimming"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:tag="popular"
                />

                <ImageButton
                        android:id="@+id/btnActivityWeights"
                        android:src="@drawable/weight"
                        android:contentDescription="@string/fitness"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:tag="popular"
                />

                <ImageButton
                        android:id="@+id/btnActivityRun"
                        android:src="@drawable/directions_run_24"
                        android:contentDescription="@string/running"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:tag="popular"
                />

                <ImageButton
                        android:id="@+id/btnActivityWalk"
                        android:src="@drawable/directions_walk_24"
                        android:contentDescription="@string/walking"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        android:tag="popular"
                />

                <ImageButton
                        android:id="@+id/btnActivityMore"
                        android:src="@drawable/martial_arts"
                        android:contentDescription="@string/taekwondo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tag="popular"
                />

                <ImageButton
                    android:id="@+id/ski"
                    android:src="@drawable/ski"
                    android:contentDescription="@string/ski"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/activity_button_selector"
                    app:tint="@color/Primary_blue"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                />

                <ImageButton
                    android:id="@+id/hiking"
                    android:src="@drawable/hiking"
                    android:contentDescription="@string/hiking"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/activity_button_selector"
                    app:tint="@color/Primary_blue"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                />

                <ImageButton
                    android:id="@+id/gymnastics"
                    android:src="@drawable/gymnastics"
                    android:contentDescription="@string/gymnastics"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/activity_button_selector"
                    app:tint="@color/Primary_blue"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                />

                <ImageButton
                        android:id="@+id/btnActivityHandball"
                        android:src="@drawable/handball"
                        android:contentDescription="@string/handball"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                />

                <ImageButton
                        android:id="@+id/btnActivityKayaking"
                        android:src="@drawable/kayaking"
                        android:contentDescription="@string/kayaking"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                />

                <ImageButton
                        android:id="@+id/btnActivityScubaDiving"
                        android:src="@drawable/scuba_diving"
                        android:contentDescription="@string/scubaDiving"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                />

                <ImageButton
                        android:id="@+id/btnActivitySkateboarding"
                        android:src="@drawable/skateboarding"
                        android:contentDescription="@string/skateboarding"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                />

                <ImageButton
                        android:id="@+id/btnActivitySurfing"
                        android:src="@drawable/surfing"
                        android:contentDescription="@string/surfing"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                />

                <ImageButton
                        android:id="@+id/btnActivityBall"
                        android:src="@drawable/ball"
                        android:contentDescription="@string/football"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/activity_button_selector"
                        app:tint="@color/Primary_blue"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                />

            </GridLayout>

            <TextView
                    android:id="@+id/tvDurationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:text="@string/durationActivity"
                    android:textColor="@color/Secondary_blue"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageButton
                        android:id="@+id/btnMinus"
                        android:src="@drawable/remove"
                        android:layout_height="50dp"
                        android:layout_width="50dp"
                        android:background="@color/Secondary_blue"
                        android:contentDescription="@string/less"
                />

                <TextView
                        android:id="@+id/tvDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/time"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:textColor="@color/Primary_blue"/>

                <ImageButton
                        android:id="@+id/btnPlus"
                        android:src="@drawable/add"
                        android:layout_height="50dp"
                        android:layout_width="50dp"
                        android:background="@color/Secondary_blue"
                        android:contentDescription="@string/plus"
                />

            </LinearLayout>

            <TextView
                    android:id="@+id/tvDurationUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/hour"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/Secondary_blue"/>

            <Button
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/add"
                    android:backgroundTint="@color/Primary_blue"
                    app:cornerRadius="20dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>